<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="75"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="@string/amount_per_serving" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorNutritionBackgroundHeader"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="75"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="@string/calories" />

        <TextView
            android:id="@+id/calories_from_fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="25"
            android:gravity="end"
            android:padding="8dp"
            android:text="@string/calories_from_fat"
            android:textAlignment="gravity" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="end"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="@string/daily_value"
            android:textAlignment="gravity" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorNutritionBackgroundHeader"
        android:weightSum="100">

        <TextView
            android:id="@+id/total_fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="75"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="@string/total_fat" />

        <TextView
            android:id="@+id/total_fat_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="25"
            android:gravity="end"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="12%"
            android:textAlignment="gravity" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/saturated_fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="75"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="@string/saturated_fat" />

        <TextView
            android:id="@+id/saturated_fat_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="25"
            android:gravity="end"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:textStyle="bold"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="5%"
            android:textAlignment="gravity" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/trans_fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="75"
            android:padding="8dp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="@string/trans_fat" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorNutritionBackgroundHeader"
        android:weightSum="100">

        <TextView
            android:id="@+id/cholesterol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="75"
            android:textStyle="bold"
            android:padding="8dp"
            android:text="@string/cholesterol" />

        <TextView
            android:id="@+id/cholesterol_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="25"
            android:gravity="end"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="0%"
            android:textAlignment="gravity" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/sodium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="75"
            android:textStyle="bold"
            android:padding="8dp"
            android:text="@string/sodium" />

        <TextView
            android:id="@+id/sodium_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="25"
            android:gravity="end"
            android:textStyle="bold"
            android:padding="8dp"
            android:text="7%"
            android:textAlignment="gravity" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorNutritionBackgroundHeader"
        android:weightSum="100">

        <TextView
            android:id="@+id/total_carbohydrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="75"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="@string/total_carbohydrate" />

        <TextView
            android:id="@+id/total_carbohydrate_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="25"
            android:gravity="end"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="12%"
            android:textAlignment="gravity" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/dietary_fiber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="75"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="@string/dietary_fiber" />

        <TextView
            android:id="@+id/dietary_fiber_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="25"
            android:gravity="end"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textStyle="bold"
            android:paddingTop="4dp"
            android:text="5%"
            android:textAlignment="gravity" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/sugars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="75"
            android:padding="8dp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="@string/sugars" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorNutritionBackgroundHeader"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/protein"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="75"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="@string/protein" />

    </LinearLayout>


    <!--Vitamins-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="75"
            android:padding="8dp"
            android:text="@string/vitamin_a" />
        <TextView
            android:id="@+id/vitamin_a_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="25"
            android:gravity="end"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="5%"
            android:textAlignment="gravity" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorNutritionBackgroundHeader"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="75"
            android:padding="8dp"
            android:text="@string/vitamin_c" />
        <TextView
            android:id="@+id/vitamin_c_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="25"
            android:gravity="end"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="5%"
            android:textAlignment="gravity" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="75"
            android:padding="8dp"
            android:text="@string/calcium" />

        <TextView
            android:id="@+id/calcium_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="25"
            android:gravity="end"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="5%"
            android:textAlignment="gravity" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorNutritionBackgroundHeader"
        android:weightSum="100">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="75"
            android:padding="8dp"
            android:text="@string/iron" />
        <TextView
            android:id="@+id/iron_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="25"
            android:gravity="end"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="5%"
            android:textAlignment="gravity" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:maxLines="5"
            android:singleLine="false"
            android:padding="8dp"
            android:text="@string/daily_value_detail" />

    </LinearLayout>

</LinearLayout>