<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="33"
            android:orientation="vertical">

            <TextView
                android:id="@+id/preparation_time"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="-" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorSecondaryText"
                android:layout_gravity="center_horizontal"
                android:text="@string/preparation_time" />
        </LinearLayout>
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/colorDivider"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="33"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cooking_time"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="-" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/cooking_time" />
        </LinearLayout>
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/colorDivider"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="33"
            android:orientation="vertical">

            <TextView
                android:id="@+id/difficulty"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="-" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/difficulty" />
        </LinearLayout>
    </LinearLayout>

    <WebView
        android:id="@+id/webview_directions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>